@@ -1,3 +1,9 @@
+2010-06-11
+
+	* src/action.c: reset signal handlers of child process to prevent
+	  app_will_exit() called on SIGTERM.
+	  Added debug output.
+
 2010-06-10
 
 	* src/folderview.[ch]: put vbox on the top of folder view.
